# sway-applications

vault/vault-contract/: Cargo.toml  Forc.toml
vault/vault-contract/src/: data_structures.sw  errors.sw  interface.sw  main.sw
vault/vault-contract/tests/functions/core/: create_vault.rs  mod.rs
vault/vault-contract/tests/utils/: mod.rs  setup.rs
vault/vault-contract/tests/utils/interface/: core.rs
