[package]
name = "vault-contract"
version = "0.1.0"
edition = "2021"
authors = ["William <william.ridge.95@gmail.com>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.53.0", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"